// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the interviewer details page renders correctly > matches loading snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          aria-label="Breadcrumbs"
          class="ons-breadcrumbs"
        >
          <ol
            class="ons-breadcrumbs__items ons-u-fs-s"
          >
            <li
              class="ons-breadcrumbs__item"
              id="breadcrumb-0"
            >
              <a
                class="ons-breadcrumbs__link"
                data-discover="true"
                href="/"
              >
                Reports
              </a>
              <svg
                class="ons-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
            <li
              class="ons-breadcrumbs__item"
              id="breadcrumb-1"
            >
              <a
                class="ons-breadcrumbs__link"
                data-discover="true"
                href="/"
              >
                Interviewer details
              </a>
              <svg
                class="ons-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
          </ol>
        </nav>
        <main
          class="ons-page__main ons-u-mt-s"
          id="main-content"
        >
          <h1>
            Select questionnaires for
          </h1>
          <h3
            class="ons-u-mb-m"
          >
            Interviewer: 
            James
            <br />
            Period: 
            01/01/2022
            –
            05/01/2022
            <br />
            Questionnaire:
             
            LMS2101_AA1
          </h3>
          <p
            aria-live="polite"
            class="ons-u-fs-s u-mt-s"
          >
            Data in this report was last updated:
             
            <b>
              Loading
            </b>
          </p>
          <p
            class="ons-u-fs-s"
          >
            Data in this report only goes back to the last 12 months.
          </p>
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_5_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <div
                class="ons-u-pt-xs ons-u-pb-xs"
                style="display: flex; align-items: center;"
              >
                <div
                  style="display: flex; margin-right: 1rem;"
                >
                  <svg
                    aria-hidden="true"
                    fill="#064868"
                    focusable="false"
                    preserveAspectRatio="xMidYMid"
                    style="width: 30px; height: 30px;"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="none"
                      height="100"
                      width="100"
                      x="0"
                      y="0"
                    />
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(0 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(30 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.08333333333333333s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(60 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.16666666666666666s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(90 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.25s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(120 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.3333333333333333s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(150 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.41666666666666663s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(180 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.5s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(210 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.5833333333333333s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(240 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.6666666666666666s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(270 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.75s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(300 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.8333333333333333s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                    <rect
                      height="20"
                      rx="5"
                      ry="5"
                      transform="rotate(330 50 50) translate(0 -30)"
                      width="7"
                      x="46.5"
                      y="40"
                    >
                      <animate
                        attributeName="opacity"
                        begin="0.9166666666666666s"
                        dur="1s"
                        from="1"
                        repeatCount="indefinite"
                        to="0"
                      />
                    </rect>
                  </svg>
                </div>
                <span>
                  Loading...
                </span>
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Select questionnaires for
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          James
          <br />
          Period: 
          01/01/2022
          –
          05/01/2022
          <br />
          Questionnaire:
           
          LMS2101_AA1
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated:
           
          <b>
            Loading
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_5_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <div
              class="ons-u-pt-xs ons-u-pb-xs"
              style="display: flex; align-items: center;"
            >
              <div
                style="display: flex; margin-right: 1rem;"
              >
                <svg
                  aria-hidden="true"
                  fill="#064868"
                  focusable="false"
                  preserveAspectRatio="xMidYMid"
                  style="width: 30px; height: 30px;"
                  viewBox="0 0 100 100"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="100"
                    width="100"
                    x="0"
                    y="0"
                  />
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(0 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(30 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.08333333333333333s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(60 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.16666666666666666s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(90 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.25s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(120 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.3333333333333333s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(150 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.41666666666666663s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(180 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.5s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(210 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.5833333333333333s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(240 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.6666666666666666s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(270 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.75s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(300 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.8333333333333333s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    transform="rotate(330 50 50) translate(0 -30)"
                    width="7"
                    x="46.5"
                    y="40"
                  >
                    <animate
                      attributeName="opacity"
                      begin="0.9166666666666666s"
                      dur="1s"
                      from="1"
                      repeatCount="indefinite"
                      to="0"
                    />
                  </rect>
                </svg>
              </div>
              <span>
                Loading...
              </span>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`the interviewer details page renders correctly > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          aria-label="Breadcrumbs"
          class="ons-breadcrumbs"
        >
          <ol
            class="ons-breadcrumbs__items ons-u-fs-s"
          >
            <li
              class="ons-breadcrumbs__item"
              id="breadcrumb-0"
            >
              <a
                class="ons-breadcrumbs__link"
                data-discover="true"
                href="/"
              >
                Reports
              </a>
              <svg
                class="ons-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
            <li
              class="ons-breadcrumbs__item"
              id="breadcrumb-1"
            >
              <a
                class="ons-breadcrumbs__link"
                data-discover="true"
                href="/"
              >
                Interviewer details
              </a>
              <svg
                class="ons-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
          </ol>
        </nav>
        <main
          class="ons-page__main ons-u-mt-s"
          id="main-content"
        >
          <h1>
            Select questionnaires for
          </h1>
          <h3
            class="ons-u-mb-m"
          >
            Interviewer: 
            James
            <br />
            Period: 
            01/01/2022
            –
            05/01/2022
            <br />
            Questionnaire:
             
            LMS2101_AA1
          </h3>
          <p
            aria-live="polite"
            class="ons-u-fs-s u-mt-s"
          >
            Data in this report was last updated:
             
            <b>
              <time
                datetime="2013-01-01T00:00:00.000Z"
                title="2013-01-01 00:00"
              >
                1 year ago
              </time>
               (01/01/2013 00:00:00)
            </b>
          </p>
          <p
            class="ons-u-fs-s"
          >
            Data in this report only goes back to the last 12 months.
          </p>
          <div
            class="ons-input-items"
          >
            <div
              class="ons-checkboxes__items"
            >
              <form
                action="#"
                id="form-_r_b_"
                novalidate=""
              >
                <div
                  class="ons-field ons-u-mb-m"
                  id="form-_r_b_-questionnaires"
                >
                  <fieldset
                    class="ons-fieldset"
                  >
                    <legend
                      class="ons-fieldset__legend ons-u-fs-r--b"
                    />
                    <div
                      class="ons-grid"
                    >
                      <div
                        class="ons-grid__col ons-col-8@m ons-col-6@l"
                      >
                        <button
                          class="ons-btn ons-u-mb-s ons-js-auto-selector ons-btn--small ons-btn--secondary"
                          type="button"
                        >
                          <span
                            class="ons-btn__inner"
                          >
                            <span
                              class="ons-js-button-text"
                            >
                              Select All
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                               following checkboxes
                            </span>
                          </span>
                        </button>
                        <div
                          class="ons-input-items"
                        >
                          <div
                            class="ons-checkboxes__items"
                          >
                            <div
                              class="ons-checkboxes__item"
                            >
                              <span
                                class="ons-checkbox"
                              >
                                <input
                                  checked=""
                                  class="ons-checkbox__input"
                                  id="LMS2101_AA1"
                                  name="questionnaires"
                                  type="checkbox"
                                  value="LMS2101_AA1"
                                />
                                <label
                                  class="ons-checkbox__label "
                                  for="LMS2101_AA1"
                                >
                                  LMS2101_AA1
                                </label>
                              </span>
                            </div>
                            <div
                              class="ons-checkboxes__item"
                            >
                              <span
                                class="ons-checkbox"
                              >
                                <input
                                  class="ons-checkbox__input"
                                  id="LMS2101_AA2"
                                  name="questionnaires"
                                  type="checkbox"
                                  value="LMS2101_AA2"
                                />
                                <label
                                  class="ons-checkbox__label "
                                  for="LMS2101_AA2"
                                >
                                  LMS2101_AA2
                                </label>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <button
                  class="ons-btn"
                  data-testid="form-_r_b_-submit-button"
                  id="form-_r_b_-submit"
                  type="submit"
                >
                  <span
                    class="ons-btn__inner"
                  >
                    <span
                      class="ons-btn__text"
                    >
                      Run report
                    </span>
                  </span>
                </button>
              </form>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Select questionnaires for
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          James
          <br />
          Period: 
          01/01/2022
          –
          05/01/2022
          <br />
          Questionnaire:
           
          LMS2101_AA1
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated:
           
          <b>
            <time
              datetime="2013-01-01T00:00:00.000Z"
              title="2013-01-01 00:00"
            >
              1 year ago
            </time>
             (01/01/2013 00:00:00)
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-input-items"
        >
          <div
            class="ons-checkboxes__items"
          >
            <form
              action="#"
              id="form-_r_b_"
              novalidate=""
            >
              <div
                class="ons-field ons-u-mb-m"
                id="form-_r_b_-questionnaires"
              >
                <fieldset
                  class="ons-fieldset"
                >
                  <legend
                    class="ons-fieldset__legend ons-u-fs-r--b"
                  />
                  <div
                    class="ons-grid"
                  >
                    <div
                      class="ons-grid__col ons-col-8@m ons-col-6@l"
                    >
                      <button
                        class="ons-btn ons-u-mb-s ons-js-auto-selector ons-btn--small ons-btn--secondary"
                        type="button"
                      >
                        <span
                          class="ons-btn__inner"
                        >
                          <span
                            class="ons-js-button-text"
                          >
                            Select All
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                             following checkboxes
                          </span>
                        </span>
                      </button>
                      <div
                        class="ons-input-items"
                      >
                        <div
                          class="ons-checkboxes__items"
                        >
                          <div
                            class="ons-checkboxes__item"
                          >
                            <span
                              class="ons-checkbox"
                            >
                              <input
                                checked=""
                                class="ons-checkbox__input"
                                id="LMS2101_AA1"
                                name="questionnaires"
                                type="checkbox"
                                value="LMS2101_AA1"
                              />
                              <label
                                class="ons-checkbox__label "
                                for="LMS2101_AA1"
                              >
                                LMS2101_AA1
                              </label>
                            </span>
                          </div>
                          <div
                            class="ons-checkboxes__item"
                          >
                            <span
                              class="ons-checkbox"
                            >
                              <input
                                class="ons-checkbox__input"
                                id="LMS2101_AA2"
                                name="questionnaires"
                                type="checkbox"
                                value="LMS2101_AA2"
                              />
                              <label
                                class="ons-checkbox__label "
                                for="LMS2101_AA2"
                              >
                                LMS2101_AA2
                              </label>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <button
                class="ons-btn"
                data-testid="form-_r_b_-submit-button"
                id="form-_r_b_-submit"
                type="submit"
              >
                <span
                  class="ons-btn__inner"
                >
                  <span
                    class="ons-btn__text"
                  >
                    Run report
                  </span>
                </span>
              </button>
            </form>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
